# genai

./: .gitignore  DAILY_LOG_0320.md  DAILY_LOG_0327_0330.md  DAILY_LOG_0331.md  DAILY_LOG_0401.md  DAILY_LOG_0402.md  DAILY_LOG_0403.md  DESIGN.md  EXPERIMENT_REPORT_0402.md  EXPERIMENT_SUMMARY.md  FinChatAudit.pptx  IMPLEMENTATION_PLAN.md  PRESENTATION_SCRIPT.md  PROGRESS.md  apply_expanded_veto.py  demo_app.py  download_sec_filings.py  extract_and_run_sec_charts.py  make_poster.py  make_presentation.py  presentationV1 1.pptx  regenerate_figures.py  research_proposal.md  run_ablation_batched.py  run_all_experiments.py  run_llm_ocr_rules.py  run_pipeline_ablation.py  run_pipeline_full.py  run_pipeline_v3_veto.py  run_pipeline_v4_combo.py  run_pipeline_v5_deplot.py  run_pipeline_v6_targeted.py  run_pipeline_v7_sequential.py  run_pipeline_v8_selfconsist.py  run_sec_chart_comparison.py  run_sonnet_comparison.py  run_vlm_rules.py  sec_cases.md  simulate_routing.py  train_classifier.py
finchartaudit/: .env.example  .gitignore  LICENSE  README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt
finchartaudit/agents/: base.py  orchestrator.py  t1_numerical.py  t2_pipeline.py  t2_visual.py  t3_pairing.py
finchartaudit/data/: ground_truth.json
finchartaudit/eval/: run_t2_batch.py  run_t3_casestudy.py
finchartaudit/parser/: pdf_parser.py
finchartaudit/prompts/: t1_numerical.py  t2_visual.py  t3_pairing.py
finchartaudit/results/: aggregated_summary.json  claude_vision_only.json  claude_vision_text.json  qwen_vision_only.json  qwen_vision_text.json  (+4 more)
(+110 files in other folders)
